--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:theme="@style/Theme.DimasKachFit">
         <activity
             android:name=".MainActivity"
-            android:exported="false">
+            android:exported="false"/>
+        <activity
+            android:noHistory="true"
+            android:theme="@style/Theme.Splash"
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
